2011-02-25  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by Simon Fraser.

        [chromium] Adding test to ensure clipping layer gets updated when layout
        width/height change in the page.
        https://bugs.webkit.org/show_bug.cgi?id=55103

        * platform/chromium/compositing/layout-width-change-expected.checksum: Added.
        * platform/chromium/compositing/layout-width-change-expected.png: Added.
        * platform/chromium/compositing/layout-width-change-expected.txt: Added.
        * platform/chromium/compositing/layout-width-change.html: Added.
2011-02-25  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by Simon Fraser.

        Update the clip layer size whenever the root layer's size and position
        is updated. This only affects the accelerated compositing path.
        https://bugs.webkit.org/show_bug.cgi?id=55103

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::updateRootLayerPosition):

        Test: platform/chromium/compositing/layout-width-change.html

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::updateRootLayerPosition):


Canonical link: https://commits.webkit.org/69618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79699 268f45cc-cd09-0410-ab3c-d52691b4dbfc